fixed z-index

--- a/less/sweetp-menu.less
+++ b/less/sweetp-menu.less
@@ -19,7 +19,7 @@ label .sweetp-hamburger-menu {
     position: fixed;
     right: -100px;
     top: -100px;
-    z-index: 100;
+    z-index: 10000;
     width: 200px;
     height: 200px;
     background: #f5f5f5;
@@ -93,7 +93,7 @@ label input:checked+.sweetp-hamburger-menu+ul {
 }
 
 label ul {
-    z-index: 200;
+    z-index: 20000;
     position: fixed;
     top: 50%;
     left: 50%;
